--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -38,7 +38,7 @@
               "taskTitle" : "Diet Survey",
               "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
               "taskFileName" : "cardio_diet_survey",
-              "taskClassName" : "APHDietSurveyViewController",
+              "taskClassName" : "APCGenericSurveyTaskViewController",
               "taskCompletionTimeString" : "6 Questions"
               },
               
@@ -57,6 +57,14 @@
               "taskClassName" : "APHWellBeingSurveyController",
               "taskCompletionTimeString" : "(One Time) 10 Questions Part 2"
               },
+              
+              {
+              "taskTitle" : "Physical Activity Readiness",
+              "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77",
+              "taskClassName" : "APHParQQuizTaskViewController",
+              "taskCompletionTimeString" : "10 Questions"
+              },
+              
               {
               "taskTitle" : "Daily Check-in",
               "taskID": "1-DailyCheckin-be42dc21-4706-478a-a398-10cabb9c7d78",
@@ -81,13 +89,13 @@
                   },
                   
                   {
-                  "expire" : "P89D",
-                  "scheduleType": "once",
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
                   "taskID": "2-APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
                   },
                   {
-                  "expire" : "P89D",
-                  "scheduleType": "once",
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
                   "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995"
                   },
                   {
@@ -119,6 +127,10 @@
                   {
                   "scheduleType": "once",
                   "taskID": "4-DayOne-be42dc21-4706-478a-a398-10cabb9c7d78"
+                  },
+                  {
+                  "scheduleType": "once",
+                  "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77"
                   }
                   ]
 }
