--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules_NoM7.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules_NoM7.json
@@ -7,11 +7,11 @@
               "taskCompletionTimeString" : "9 Questions"
               },
               {
-              "taskTitle": "6-Minute Walk Test",
-              "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
-              "taskClassName": "APHFitnessTaskViewController",
-              "taskCompletionTimeString" : "6-9 Minutes"
+              "taskTitle": "7-Day Activity and Sleep Assessment",
+              "taskID": "3-APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995",
+              "taskClassName": "APHSevenDayFitnessAllocationTaskViewController"
               },
+              
               {
               "taskTitle" : "Activity and Sleep Survey",
               "taskID": "2-CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
@@ -51,6 +51,14 @@
               "taskClassName" : "APHWellBeingSurveyController",
               "taskCompletionTimeString" : "(One Time) 10 Questions Part 2"
               },
+              
+              {
+              "taskTitle" : "Physical Activity Readiness",
+              "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77",
+              "taskClassName" : "APHParQQuizTaskViewController",
+              "taskCompletionTimeString" : "10 Questions"
+              },
+              
               {
               "taskTitle" : "Daily Check-in",
               "taskID": "1-DailyCheckin-be42dc21-4706-478a-a398-10cabb9c7d78",
@@ -80,9 +88,9 @@
                   "taskID": "2-APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
                   },
                   {
-                  "expire" : "P89D",
-                  "scheduleType": "once",
-                  "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995"
+                  "scheduleType": "recurring",
+                  "scheduleString": "0 5 * * *",
+                  "taskID": "3-APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995"
                   },
                   {
                   "scheduleType": "once",
@@ -108,6 +116,10 @@
                   {
                   "scheduleType": "once",
                   "taskID": "4-DayOne-be42dc21-4706-478a-a398-10cabb9c7d78"
+                  },
+                  {
+                  "scheduleType": "once",
+                  "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77"
                   }
                   ]
 }
