--- a/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
+++ b/CardioHealth/Resources/JSONs/APHTasksAndSchedules.json
@@ -1,136 +1,129 @@
 {
-    "tasks": [
-              {
-              "taskTitle": "Heart/Stroke Risk Score + Heart Age",
-              "taskID": "2-APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
-              "taskClassName": "APHHeartAgeTaskViewController",
-              "taskCompletionTimeString" : "9 Questions"
-              },
-              {
-              "taskTitle": "6-Minute Walk Test",
-              "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
-              "taskClassName": "APHFitnessTaskViewController",
-              "taskCompletionTimeString" : "6-9 Minutes"
-              },
-              {
-              "taskTitle": "7-Day Activity and Sleep Assessment",
-              "taskID": "3-APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995",
-              "taskClassName": "APHSevenDayFitnessAllocationTaskViewController"
-              },
-              
-              {
-              "taskTitle" : "Activity and Sleep Survey",
-              "taskID": "2-CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
-              "taskFileName" : "cardio_activitysleep_survey",
-              "taskClassName" : "APCGenericSurveyTaskViewController",
-              "taskCompletionTimeString" : "8 Questions"
-              },
-              
-              {
-              "taskTitle" : "Cardiovascular Health Survey",
-              "taskID": "3-CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
-              "taskFileName" : "cardio_CVhealth_survey",
-              "taskClassName" : "APHCardiovascularHealthSurveyController",
-              "taskCompletionTimeString" : "4 Questions"
-              },
-              
-              {
-              "taskTitle" : "Diet Survey",
-              "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
-              "taskFileName" : "cardio_diet_survey",
-              "taskClassName" : "APHDietSurveyViewController",
-              "taskCompletionTimeString" : "6 Questions"
-              },
-              
-              {
-              "taskTitle" : "Well-Being and Risk Perception Survey",
-              "taskID": "2-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
-              "taskFileName" : "cardio_wellbeing_survey",
-              "taskClassName" : "APHWellBeingSurveyController",
-              "taskCompletionTimeString" : "(One Time) 10 Questions Part 1"
-              },
-
-              {
-              "taskTitle" : "Well-Being and Risk Perception Survey",
-              "taskID": "5-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C0000",
-              "taskFileName" : "cardio_wellbeing_survey",
-              "taskClassName" : "APHWellBeingSurveyController",
-              "taskCompletionTimeString" : "(One Time) 10 Questions Part 2"
-              },
-              
-              {
-              "taskTitle" : "Physical Activity Readiness",
-              "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77",
-              "taskClassName" : "APHParQQuizTaskViewController",
-              "taskCompletionTimeString" : "10 Questions"
-              },
-              
-              {
-              "taskTitle" : "Daily Check-in",
-              "taskID": "1-DailyCheckin-be42dc21-4706-478a-a398-10cabb9c7d78",
-              "taskFileName" : "cardio_daily_check",
-              "taskClassName" : "APCGenericSurveyTaskViewController",
-              "taskCompletionTimeString" : "10 Questions"
-              },
-              {
-              "taskTitle" : "Day One Check-in",
-              "taskID": "4-DayOne-be42dc21-4706-478a-a398-10cabb9c7d78",
-              "taskFileName" : "cardio_day_one",
-              "taskClassName" : "APCGenericSurveyTaskViewController",
-              "taskCompletionTimeString" : "(One Time) 3 Questions"
-              }
-              
-              ],
     "schedules": [
                   {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 0 * * *",
-                  "taskID": "1-DailyCheckin-be42dc21-4706-478a-a398-10cabb9c7d78"
-                  },
-                  
-                  {
-                  "expire" : "P89D",
-                  "scheduleType": "once",
-                  "taskID": "2-APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF"
-                  },
-                  {
-                  "expire" : "P89D",
-                  "scheduleType": "once",
-                  "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995"
+                  "scheduleType"    : "once",
+                  "delay"           : "P8D",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle": "Heart/Stroke Risk Score + Heart Age",
+                                       "taskID": "2-APHHeartAge-7259AC18-D711-47A6-ADBD-6CFCECDED1DF",
+                                       "taskClassName": "APHHeartAgeTaskViewController",
+                                       "taskCompletionTimeString" : "9 Questions"
+                                       }]
                   },
                   {
-                  "scheduleType": "recurring",
-                  "scheduleString": "0 5 * * *",
-                  "taskID": "3-APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995"
+                  "scheduleType"    : "once",
+                  "delay"           : "P8D",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle": "6-Minute Walk Test",
+                                       "taskID": "3-APHFitnessTest-00000000-1111-1111-1111-F810BE28D995",
+                                       "taskClassName": "APHFitnessTaskViewController",
+                                       "taskCompletionTimeString" : "6-9 Minutes"
+                                       }]
                   },
                   {
-                  "scheduleType": "once",
-                  "taskID": "2-CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
+                  "scheduleType"    : "recurring",
+                  "scheduleString"  : "0 5 * * *",
+                  "interval"        : "P1D",
+                  "tasks"           : [{
+                                       "taskTitle": "7-Day Activity and Sleep Assessment",
+                                       "taskID": "3-APHSevenDayAllocation-00000000-1111-1111-1111-F810BE28D995",
+                                       "taskClassName": "APHSevenDayFitnessAllocationTaskViewController"
+                                       }]
                   },
                   {
-                  "scheduleType": "once",
-                  "taskID": "3-CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
+                  "scheduleType"    : "once",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle" : "Activity and Sleep Survey",
+                                       "taskID": "2-CardioActivityAndSleepSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
+                                       "taskFileName" : "cardio_activitysleep_survey",
+                                       "taskClassName" : "APCGenericSurveyTaskViewController",
+                                       "taskCompletionTimeString" : "8 Questions"
+                                       }]
                   },
                   {
-                  "scheduleType": "once",
-                  "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
+                  "scheduleType"    : "once",
+                  "delay"           : "P2D",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle" : "Cardiovascular Health Survey",
+                                       "taskID": "3-CardioVascularHealthSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
+                                       "taskFileName" : "cardio_CVhealth_survey",
+                                       "taskClassName" : "APHCardiovascularHealthSurveyController",
+                                       "taskCompletionTimeString" : "4 Questions"
+                                       }]
                   },
                   {
-                  "scheduleType": "once",
-                  "taskID": "2-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66"
+                  "scheduleType"    : "once",
+                  "delay"           : "P2D",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle" : "Diet Survey",
+                                       "taskID": "4-DietSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
+                                       "taskFileName" : "cardio_diet_survey",
+                                       "taskClassName" : "APHDietSurveyViewController",
+                                       "taskCompletionTimeString" : "6 Questions"
+                                       }]
                   },
-                  
                   {
-                  "scheduleType": "once",
-                  "taskID": "5-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C0000"
+                  "scheduleType"    : "once",
+                  "delay"           : "P2D",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle" : "Well-Being and Risk Perception Survey",
+                                       "taskID": "2-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C9A66",
+                                       "taskFileName" : "cardio_wellbeing_survey",
+                                       "taskClassName" : "APHWellBeingSurveyController",
+                                       "taskCompletionTimeString" : "(One Time) 10 Questions Part 1"
+                                       }]
                   },
                   {
-                  "scheduleType": "once",
-                  "taskID": "4-DayOne-be42dc21-4706-478a-a398-10cabb9c7d78"
+                  "scheduleType"    : "once",
+                  "delay"           : "P8D",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle" : "Well-Being and Risk Perception Survey",
+                                       "taskID": "5-WellBeingAndRiskPerceptionSurvey-1E174061-5B02-11E4-8ED6-0800200C0000",
+                                       "taskFileName" : "cardio_wellbeing_survey",
+                                       "taskClassName" : "APHWellBeingSurveyController",
+                                       "taskCompletionTimeString" : "(One Time) 10 Questions Part 2"
+                                       }]
                   },
                   {
-                  "scheduleType": "once",
-                  "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77"
+                  "scheduleType"    : "once",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle" : "Physical Activity Readiness",
+                                       "taskID": "1-parqquiz-1E174061-5B02-11E4-8ED6-0800200C9A77",
+                                       "taskClassName" : "APHParQQuizTaskViewController",
+                                       "taskCompletionTimeString" : "10 Questions"
+                                       }]
+                  },
+                  {
+                  "scheduleType"    : "once",
+                  "scheduleString"  : "0 5 * * *",
+                  "delay"           : "P2D",
+                  "interval"        : "P1D",
+                  "tasks"           : [{
+                                       "taskTitle" : "Daily Check-in",
+                                       "taskID": "1-DailyCheckin-be42dc21-4706-478a-a398-10cabb9c7d78",
+                                       "taskFileName" : "cardio_daily_check",
+                                       "taskClassName" : "APCGenericSurveyTaskViewController",
+                                       "taskCompletionTimeString" : "10 Questions"
+                                       }]
+                  },
+                  {
+                  "scheduleType"    : "once",
+                  "interval"        : "P90D",
+                  "tasks"           : [{
+                                       "taskTitle" : "Day One Check-in",
+                                       "taskID": "4-DayOne-be42dc21-4706-478a-a398-10cabb9c7d78",
+                                       "taskFileName" : "cardio_day_one",
+                                       "taskClassName" : "APCGenericSurveyTaskViewController",
+                                       "taskCompletionTimeString" : "(One Time) 3 Questions"
+                                       }]
                   }
                   ]
 }
